--- a/public/index.html
+++ b/public/index.html
@@ -16,10 +16,9 @@
 
         <div class="trip-main">
           <div class="trip-main__trip-controls  trip-controls">
-            <div class="trip-controls__filters">
+            <!-- <div class="trip-controls__filters">
               <h2 class="visually-hidden">Filter events</h2>
-              <!-- Фильтры -->
-            </div>
+            </div> -->
           </div>
 
           <button class="trip-main__event-add-btn  btn  btn--big  btn--yellow" type="button">New event</button>
@@ -37,5 +36,6 @@
           </section>
       </div>
     </main>
+    <script src="./bundle.js"></script>
   </body>
 </html>
