--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,9 @@
 
         <div class="trip-main">
           <div class="trip-main__trip-controls  trip-controls">
-            <!-- <div class="trip-controls__filters">
+            <div class="trip-controls__filters">
               <h2 class="visually-hidden">Filter events</h2>
-            </div> -->
+            </div>
           </div>
 
           <button class="trip-main__event-add-btn  btn  btn--big  btn--yellow" type="button">New event</button>
@@ -29,10 +29,6 @@
       <div class="page-body__container">
           <section class="trip-events">
             <h2 class="visually-hidden">Trip events</h2>
-
-            <!-- Сортировка -->
-
-            <!-- Контент -->
           </section>
       </div>
     </main>
